[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/ListKanjiWindow.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/KosugiMaru-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="ListKanjiWindow" type="VBoxContainer"]
margin_top = 31.0
margin_right = 780.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KanjiList" type="TextEdit" parent="."]
margin_right = 780.0
margin_bottom = 518.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
readonly = true
smooth_scrolling = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageControls" type="HBoxContainer" parent="."]
margin_top = 522.0
margin_right = 780.0
margin_bottom = 549.0
custom_constants/separation = 200
alignment = 1

[node name="Previous" type="Button" parent="PageControls"]
margin_left = 55.0
margin_right = 155.0
margin_bottom = 27.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 0
custom_fonts/font = SubResource( 1 )
text = "Previous"

[node name="PageNumber" type="Label" parent="PageControls"]
margin_left = 355.0
margin_top = 3.0
margin_right = 425.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "Page 10"

[node name="Next" type="Button" parent="PageControls"]
margin_left = 625.0
margin_right = 725.0
margin_bottom = 27.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 0
custom_fonts/font = SubResource( 1 )
text = "Next"
